--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,26 @@
 }
 
 .footer {
-  background-color: #d1c4e9;
+  background-color: #2c1a0b;
+  color: white;
   margin: 0px auto;
   padding: 20px 0px 20px 0px;
+  position: relative;
+  width: 100%;
+}
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrapper {
+  flex: 1;
 }
 .jumbotron {
   padding: 70px 30px 70px 30px;
   margin: 0px auto;
-  background: #9575cd;
+  background: #ac172b;
   color: floralwhite;
 }
 
@@ -29,7 +41,7 @@ address {
 }
 
 .navbar-dark {
-  background-color: #512da8;
+  background-color: #7c270a;
 }
 
 .page-enter {
