--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .footer {
-  background-color: #2c1a0b;
+  background-image: linear-gradient(#2c1a0b, #220e08);
   color: white;
   margin: 0px auto;
   padding: 20px 0px 20px 0px;
@@ -27,12 +27,12 @@
 .content-wrapper {
   flex: 1;
 }
-.jumbotron {
+/* .jumbotron {
   padding: 70px 30px 70px 30px;
   margin: 0px auto;
   background: #ac172b;
   color: floralwhite;
-}
+} */
 
 address {
   font-size: 80%;
@@ -41,7 +41,7 @@ address {
 }
 
 .navbar-dark {
-  background-color: #7c270a;
+  background-color: #000001;
 }
 
 .page-enter {
