--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,14 @@ address {
   background-color: #000001;
 }
 
+.jumbotron {
+  margin: 0px auto;
+  /* margin-top: -100px; */
+  background: #000001;
+  width: 50%;
+  color: floralwhite;
+}
+
 .page-enter {
   opacity: 0.01;
   transform: translateX(-100%);
